--- a/source/posts/2012-05-17.md
+++ b/source/posts/2012-05-17.md
@@ -1,4 +1,67 @@
-* Любите Emacs больше жизни? [Встройте его куда угодно](http://www.kickstarter.com/projects/568774734/emacsy-an-embeddable-emacs) — проект на Kickstarter позволит это сделать, если ему помочь.
-* [Почему мобильное приложение Facebook такое медленное](http://blog.mobtest.com/2012/05/heres-why-the-facebook-ios-app-is-so-bad-uiwebviews-and-no-nitro/). Не знаю, как вам, а мне совершенно непонятно, почему его не сделали нормальным. Разве что это сознательная жертва ради кроссплатформенности. Поэтому и на Android ситуация не лучше.
-* [Google запустил Knowledge Graph](http://edition.cnn.com/2012/05/16/tech/web/google-search-knowledge-graph/index.html?hpt=hp_c3). Утверждается, что новая фишка в поиске позволит искать в 1000 раз лучше и вообще машина начнет думать, как человек, но я эту ссылку привел не для этого. Я подписан на breakingnews@CNN уже лет 12 и это первый случай на моей памяти, когда крупнейший новостной канал планеты статус *breaking* выставляет запуску в интернет-поиске.
-* Пользователи Google+ пишут мало, делают это реже с течением времени, мало лайкают и совсем мало шарят записи — такие результаты получились из [исследования RJ Metrics по  40000 случайно выбранным пользователям сети](http://info.rjmetrics.com/blog/bid/56123/New-Google-Plus-Data-Shows-Weak-User-Engagement). В комментариях встречаются стандартное негодование и обвинения в черном пиаре — там это называется "You have some agenda". Google тоже ответил, [сообщив](http://www.fastcompany.com/1837332/exclusive-google-google-plus-ghost-town-weak-engagement-data-rj-metrics-study), что некорректно измерять эту активность по публичным постам, вся жизнь в сети, мол, проходит скрыто от глаз публики, внутри кругов пользователя. 
+# Можно ли украсть данные?
+Если я думаю правильно, то сегодняшний день все, кто делают интернет, должны пометить крестиком, обвести красным кружком или вообще выколоть. Сегодня [Google анонсировал свой проект Knowledge Graph](http://googleblog.blogspot.com/2012/05/introducing-knowledge-graph-things-not.html). В проекте в общем-то ничего нового, гугл анонсировал три важных направления деятельности проекта:
+
+1. *Находить нужное*: ну, т.е. очевидно что человек, ищущий "пицца" может искать доставку, рецепт, определение, да в общем много еще чего. Раньше гугл оперировал термином "разнообразие первой страницы". Теперь будет селектор, позволяющий уточнить, что именно вы имели ввиду.
+2. *Показывать сводку*: это хитрый анонс. В нем говорится, что кроме снипетов, будет еще и особый тип ответа - сводка. В саммари попадет самая часто употребимая информация, в удобном для человека виде. Отдельно говорится, что очень удобно - человек будет получать ответ прямо в выдаче гугла, переходить никуда не надо.
+3. *Идти глубже и дальше*: суть нововведения легко понятна всем, кто зависал в википедии :) справа от выдачи поиска будет еще специальная навигация, позволяющая двигаться по связанным запросам.
+
+>>![center](https://img.skitch.com/20120517-n28c1xmw3fdi397g67dp8yfshy.png)<<
+
+Это не революция, как пишут некоторые, это хороший эволюционный шаг. Шаг, на который другие поисковики пока не решались. Т.е. да, у яндекса и бинга есть связанные запросы, помогающие уточнить, что именно человек ищет. Т.е. по сути пункт номер 1. "находить нужное" есть уже у всех. Да, пункт номер 3 тоже делается легко, причем кем угодно, используя например базу FreeBase. Но пункт 2 пока мало кто понял. А ведь это по сути и есть взрыв.
+
+Понимаете ли вы, что появление "богатой сводки" резко снижает для людей полезность википедии, например? Нет нужды больше переходить на сайты-источники информации, т.к. вся информация уже прямо доступна на страницах гугла. Мне, как пользователю, очень нравится как это выглядит. По сути весь интернет, как источник информации, сужается для меня до моей поисковой машины. А вот понравится ли это мне, как создателю сайтов в интернете? Не знаю. Думаю, что нас ждет еще ураган криков "мы забаним гугл", потому что главная задача гугла в глазах википедии - созадние трафика на википедию. Нет трафика - нет гугла.
+
+При этом, я уверен, что гугл просто первым пересекла эту линию и скоро остальные поисковики тоже потянутся туда же. И, кстати, скорее всего сделают это лучше, чем гугл. Особенно в этом отношении я верю в Бинг.
+
+Подборка ссылок про эту новость:
+
+* [Теккранч: гугль стал умнее, запустил свой knowledge graph](http://techcrunch.com/2012/05/16/google-just-got-a-whole-lot-smarter-launches-its-knowledge-graph/)
+* [ZdNet: knowledge graph, вот из-за чего они изменили своё пользовательское соглашение](http://www.zdnet.com/blog/google/google-knowledge-graph-this-is-why-they-changed-their-privacy-policy/3640)
+* [SEL: Гугл будет давать ответы, не просто ссылки](http://searchengineland.com/google-launches-knowledge-graph-121585)
+* [Поиск для мобильных и планшетов](http://insidesearch.blogspot.co.uk/2012/05/knowledge-graph-for-mobile-and-tablet.html)
+* А вот что пишет про это [@gray_ru](http://twitter.com/gray_ru), давно занимающийся поиском:
+
+>> [Google запустил Knowledge Graph](http://edition.cnn.com/2012/05/16/tech/web/google-search-knowledge-graph/index.html?hpt=hp_c3). Утверждается, что новая фишка в поиске позволит искать в 1000 раз лучше и вообще машина начнет думать, как человек, но я эту ссылку привел не для этого. Я подписан на breakingnews@CNN уже лет 12 и это первый случай на моей памяти, когда крупнейший новостной канал планеты статус *breaking* выставляет запуску в интернет-поиске.
+
+-----
+
+## Для всех
+* [Ух, сайт 23andMe моего самого любимого предпринимателя, внезапно нашел родителей ребенка, которые отдали его на усыновление](http://www.forbes.com/sites/kashmirhill/2012/05/16/dna-site-23andme-outed-parents-who-gave-their-first-baby-up-for-adoption/). Сайт, напомню, занимается тем, что работает с вашим ДНК, который вы присылаете в пробирочке. Я даже заплатил деньги за анализ, но пробирочка еще не приехала. {23andme} {startup}
+* [На ux.stackexchange интересное обсуждение на тему "где вставлять листалку страниц в современном интернете"](http://ux.stackexchange.com/questions/21375/is-there-a-point-to-paginating-articles-online). Пока самый популярный ответ "листалка не нужна", я согласен :) {ux} {design}
+* [Поучительное чтиво для всех: любовь и ненависть Node.js](http://mailinator.blogspot.com/2012/05/love-and-hate-of-nodejs.html). Совсем не про глубокие технологии, скорее про психологию и философию в инструментах. {node.js} {tools}
+* [Исчезновение OpenSource](http://www.ostraining.com/blog/general/the-dissapperance-of-open-source/). Автор логично замечает что почти со всех сайтов начало пропадать выражение "Open Source" и делает интересные выводы почему именно. Заметьте, с этого сайта open source не пропадал никогда! {opensource}
+* [Context.io, сервис предоставляющий удобный API для почты, обновился](http://blog.context.io/2012/05/new-additions-to-context-io-2-0/). Добавилась возможность получить данные не из кеша context.io, а напрямую с IMAP сервера. {contextio} {imap} {mail} {code}
+* [И раз уж такая пьянка - обновился fab.com, самый крутой магазин в части "социальных покупок" дизайнерских товаров](http://venturebeat.com/2012/05/16/fab-com-social-shopping/). Даже я там закупаюсь. Тот факт, что это бывшая гей-соц-сеть меня не смущает :) {fab} {reload}
+* [Обновился Windows 8 Release preview](http://www.theverge.com/2012/5/16/3023702/windows-8-release-preview-mail-calendar-people-messaging-apps). Ну, еще немного скриншотов, и я захочу попробовать эту OS. Движение "сделать мобильную ос с нуля, а потом перенести всё это в десктоп" мне нравится. {microsoft} {win} {mobile}
+* [Скажите привет риалтаймовому вебу](http://arstechnica.com/business/2012/05/say-hello-to-the-real-real-time-web/?1), развесистая статья о том, что новый веб работает не так как раньше. По сути своей автор говорит что теперь у нас другой визуальный ряд, всячески подчеркивающий что всё это происходит в реальном режиме времени. Возможно, хотя меня смущает, что всё это в среднем - только фикция. {realtime} {web}
+* [Видео на тему "как Pixar чуть не потеряли ToyStory 2 из-за плохого бэкапа"](http://www.tested.com/videos/44220-how-pixar-almost-lost-toy-story-2-to-a-bad-backup/). {video} {pixar} {backup}
+
+## На грани
+* [Обратите внимание на изменения в Gmail: теперь она показывает куда больше информации, чем доступно в адресной книге](http://thenextweb.com/google/2012/05/16/gmail-now-surfaces-more-information-about-contacts-and-circles-when-you-search-for-them/). На самом деле это значит, что до gmail добрались аватарки из G+. Ну, тут гугл позади планеты всей, аватарки в почте уже давно и у всех. {gmail} {google}
+* [Стратегии тестирования, при деплое Node.js и MongoDB на хероку и монголэб](http://blog.beyondfog.com/testing-cd-node-mongo-app-heroku/). Скорее обзорная статья о том, как бы неплохо тестировать приложения в условиях continuous deployment. Да, вот такие темы сегодня в "на грани", не пугайтесь :) {node} {mongo} {deploy} {heroku}
+* [Очень красиво оформленный каталог RFC](http://pretty-rfc.herokuapp.com/). Что важно, не только красиво, но и удобно. Обещают научиться так же сохранять rfc в виде .epub и .mobi для киндла! {rfc} {design}
+* [Cargo-cult debugging: это когда ты совершаешь случайные действия в отладчике, без какой-либо идеи почему и как что-то идет не так](http://bitquabit.com/post/cargo-cult-debugging/).  Я согласен с выводом автора статьи и вороном Эдгара Алана По. {debugging} {code}
+* [Так и не смог получить доступ, но очень интересно: Capsule, система позволяющая находить полезные и осмысленные фотки с места, где что-то происходит](http://detectd.teleportd.com/). Как я понял, собирает все фотки из всех открытых соцсетей (через teleportd), выделяет те фотки, где много людей и кластеризует их, чтобы удобно смотреть. Очень интересно, но, повторяюсь, посмотреть пока не смог. {todo} {images} {clustering}
+
+## Для гиков
+* [Эх. Последняя версия Хрома ломает работу с секурными вебсокетами](http://code.google.com/p/chromium/issues/detail?id=128339). Надеюсь на быстрое исправление, у меня кое-где так <s>не</s>работает.
+* [Прощай, MongoDB](http://www.zopyx.de/blog/goodbye-mongodb) пишет нам неизвестный консультант по Plone. Ну, тоже мнение, чего. {mongodb}
+* [А вот другие вообще пишут туториалы, как они работают с Node + CouchDB](http://tbranyen.com/post/thoughts-on-development-using-couchdb-with-nodejs). Я уже совсем не понимаю смысла в кауче, при наличии живой монги. {couchdb} {nodejs} {mongo}
+* [Клиентская библиотека для удобной работы с localStorage в key-value идеалогии](https://github.com/js-coder/lostorage.js). Свеженькая, но интересная и работает стабильно. {js} {localstorage} {kv} {html}
+* [А вот внезапно кто-то обнаружил import lock в питоне](http://reticulatingsplines.posterous.com/python-has-two-gils). Ну да, в питоне этих локов... Но ведь работает же. И в многотредовой среде тоже. {GIL} {python}
+* [Как сконфигурировать Nginx для хостинга сразу большого количества django и flask приложений](http://tghw.com/blog/multiple-django-and-flask-sites-with-nginx-and-uwsgi-emperor). С использованием uwsgi и emperor. В общем это в закладкию {python} {nginx}
+* [Чуваки из trigger.io решили взять всех штурмом и раз в неделю выкладывают интересные туториалы по быстрой разработке мобильных приложений](http://trigger.io/cross-platform-application-development-blog/2012/05/15/how-to-build-a-location-based-hybrid-mobile-app-with-reverse-geocoding/). Прямо завидую тому, насколько у них быстро всё получается. {triggerio} {mobile} {code}
+* [Авторы codiqa делятся своим опытом применения backbone.js](http://blog.codiqa.com/2012/05/how-we-use-backbone-js-to-build-codiqa-part-1-api/). В такие моменты я грызу локти, что так плохо пишу на клиентской стороне. {backbone} {html}
+* [Прекрасное: гражданам так понравился underscore.js, что они перетащили большую часть его функциональности на Objective-C](https://github.com/robb/Underscore.m). И это правда прекрасно, потому что в функциональном стиле на Objective-C я еще не писал :) {objc} {mobile} {underscore}
+* 
+## Разное
+
+
+## Темы читателей
+И опять почти все темы от [@gray_ru](http://twitter.com/gray_ru). Ради него я даже добавил строчку про гитхаб внизу текста поста.
+
+* Любите Emacs больше жизни? [Встройте его куда угодно](http://www.kickstarter.com/projects/568774734/emacsy-an-embeddable-emacs) — проект на Kickstarter позволит это сделать, если ему помочь. {emacs} {kickstarter}
+* [Почему мобильное приложение Facebook такое медленное](http://blog.mobtest.com/2012/05/heres-why-the-facebook-ios-app-is-so-bad-uiwebviews-and-no-nitro/). Не знаю, как вам, а мне совершенно непонятно, почему его не сделали нормальным. Разве что это сознательная жертва ради кроссплатформенности. Поэтому и на Android ситуация не лучше. {fb} {mobile} {html}
+* Пользователи Google+ пишут мало, делают это реже с течением времени, мало лайкают и совсем мало шарят записи — такие результаты получились из [исследования RJ Metrics по  40000 случайно выбранным пользователям сети](http://info.rjmetrics.com/blog/bid/56123/New-Google-Plus-Data-Shows-Weak-User-Engagement). В комментариях встречаются стандартное негодование и обвинения в черном пиаре — там это называется "You have some agenda". Google тоже ответил, [сообщив](http://www.fastcompany.com/1837332/exclusive-google-google-plus-ghost-town-weak-engagement-data-rj-metrics-study), что некорректно измерять эту активность по публичным постам, вся жизнь в сети, мол, проходит скрыто от глаз публики, внутри кругов пользователя.  {gplus} {google}
+
+*P.S. скажите, как вам нижестоящая строчка с гитхабом. Не мешает? Удобно ли?*
