--- a/source/posts/2012-05-17.md
+++ b/source/posts/2012-05-17.md
@@ -49,7 +49,7 @@
 * [А вот другие вообще пишут туториалы, как они работают с Node + CouchDB](http://tbranyen.com/post/thoughts-on-development-using-couchdb-with-nodejs). Я уже совсем не понимаю смысла в кауче, при наличии живой монги. {couchdb} {nodejs} {mongo}
 * [Клиентская библиотека для удобной работы с localStorage в key-value идеалогии](https://github.com/js-coder/lostorage.js). Свеженькая, но интересная и работает стабильно. {js} {localstorage} {kv} {html}
 * [А вот внезапно кто-то обнаружил import lock в питоне](http://reticulatingsplines.posterous.com/python-has-two-gils). Ну да, в питоне этих локов... Но ведь работает же. И в многотредовой среде тоже. {GIL} {python}
-* [Как сконфигурировать Nginx для хостинга сразу большого количества django и flask приложений](http://tghw.com/blog/multiple-django-and-flask-sites-with-nginx-and-uwsgi-emperor). С использованием uwsgi и emperor. В общем это в закладкию {python} {nginx}
+* [Как сконфигурировать Nginx для хостинга сразу большого количества django и flask приложений](http://tghw.com/blog/multiple-django-and-flask-sites-with-nginx-and-uwsgi-emperor). С использованием uwsgi и emperor. В общем это в закладки. {python} {nginx}
 * [Чуваки из trigger.io решили взять всех штурмом и раз в неделю выкладывают интересные туториалы по быстрой разработке мобильных приложений](http://trigger.io/cross-platform-application-development-blog/2012/05/15/how-to-build-a-location-based-hybrid-mobile-app-with-reverse-geocoding/). Прямо завидую тому, насколько у них быстро всё получается. {triggerio} {mobile} {code}
 * [Авторы codiqa делятся своим опытом применения backbone.js](http://blog.codiqa.com/2012/05/how-we-use-backbone-js-to-build-codiqa-part-1-api/). В такие моменты я грызу локти, что так плохо пишу на клиентской стороне. {backbone} {html}
 * [Прекрасное: гражданам так понравился underscore.js, что они перетащили большую часть его функциональности на Objective-C](https://github.com/robb/Underscore.m). И это правда прекрасно, потому что в функциональном стиле на Objective-C я еще не писал :) {objc} {mobile} {underscore}
