--- a/source/posts/2012-05-17.md
+++ b/source/posts/2012-05-17.md
@@ -28,7 +28,7 @@
 ## Для всех
 * [Ух, сайт 23andMe моего самого любимого предпринимателя, внезапно нашел родителей ребенка, которые отдали его на усыновление](http://www.forbes.com/sites/kashmirhill/2012/05/16/dna-site-23andme-outed-parents-who-gave-their-first-baby-up-for-adoption/). Сайт, напомню, занимается тем, что работает с вашим ДНК, который вы присылаете в пробирочке. Я даже заплатил деньги за анализ, но пробирочка еще не приехала. {23andme} {startup}
 * [На ux.stackexchange интересное обсуждение на тему "где вставлять листалку страниц в современном интернете"](http://ux.stackexchange.com/questions/21375/is-there-a-point-to-paginating-articles-online). Пока самый популярный ответ "листалка не нужна", я согласен :) {ux} {design}
-* [Поучительное чтиво для всех: любовь и ненависть Node.js](http://mailinator.blogspot.com/2012/05/love-and-hate-of-nodejs.html). Совсем не про глубокие технологии, скорее про психологию и философию в инструментах. {node.js} {tools}
+* [Поучительное чтиво для всех: любовь и ненависть Node.js](http://mailinator.blogspot.com/2012/05/love-and-hate-of-nodejs.html). Совсем не про глубокие технологии, скорее про психологию и философию в инструментах. {nodejs} {tools}
 * [Исчезновение OpenSource](http://www.ostraining.com/blog/general/the-dissapperance-of-open-source/). Автор логично замечает что почти со всех сайтов начало пропадать выражение "Open Source" и делает интересные выводы почему именно. Заметьте, с этого сайта open source не пропадал никогда! {opensource}
 * [Context.io, сервис предоставляющий удобный API для почты, обновился](http://blog.context.io/2012/05/new-additions-to-context-io-2-0/). Добавилась возможность получить данные не из кеша context.io, а напрямую с IMAP сервера. {contextio} {imap} {mail} {code}
 * [И раз уж такая пьянка - обновился fab.com, самый крутой магазин в части "социальных покупок" дизайнерских товаров](http://venturebeat.com/2012/05/16/fab-com-social-shopping/). Даже я там закупаюсь. Тот факт, что это бывшая гей-соц-сеть меня не смущает :) {fab} {reload}
