--- a/source/posts/2012-05-17.md
+++ b/source/posts/2012-05-17.md
@@ -9,7 +9,7 @@
 
 Это не революция, как пишут некоторые, это хороший эволюционный шаг. Шаг, на который другие поисковики пока не решались. Т.е. да, у яндекса и бинга есть связанные запросы, помогающие уточнить, что именно человек ищет. Т.е. по сути пункт номер 1. "находить нужное" есть уже у всех. Да, пункт номер 3 тоже делается легко, причем кем угодно, используя например базу FreeBase. Но пункт 2 пока мало кто понял. А ведь это по сути и есть взрыв.
 
-Понимаете ли вы, что появление "богатой сводки" резко снижает для людей полезность википедии, например? Нет нужды больше переходить на сайты-источники информации, т.к. вся информация уже прямо доступна на страницах гугла. Мне, как пользователю, очень нравится как это выглядит. По сути весь интернет, как источник информации, сужается для меня до моей поисковой машины. А вот понравится ли это мне, как создателю сайтов в интернете? Не знаю. Думаю, что нас ждет еще ураган криков "мы забаним гугл", потому что главная задача гугла в глазах википедии - созадние трафика на википедию. Нет трафика - нет гугла.
+Понимаете ли вы, что появление "богатой сводки" резко снижает для людей полезность википедии, например? Нет нужды больше переходить на сайты-источники информации, т.к. вся информация уже прямо доступна на страницах гугла. Мне, как пользователю, очень нравится как это выглядит. По сути весь интернет, как источник информации, сужается для меня до моей поисковой машины. А вот понравится ли это мне, как создателю сайтов в интернете? Не знаю. Думаю, что нас ждет еще ураган криков "мы забаним гугл", потому что главная задача гугла в глазах википедии - создание трафика на википедию. Нет трафика - нет гугла.
 
 При этом, я уверен, что гугл просто первым пересекла эту линию и скоро остальные поисковики тоже потянутся туда же. И, кстати, скорее всего сделают это лучше, чем гугл. Особенно в этом отношении я верю в Бинг.
 
