--- a/source/posts/2012-05-18.md
+++ b/source/posts/2012-05-18.md
@@ -8,7 +8,7 @@
 * [Саша Греф: Пожалуйста, учитесь программировать!](http://sachagreif.com/please-learn-to-code/) С главной мыслью "Джеф не прав, учитесь программировать" :)
 * [CodingNinja: Пожалуйста не учитесь программировать, но вообще попробуйте](http://www.codingninja.co.uk/please-dont-learn-to-code-but-give-it-a-try/). Без главной мысли, но вообще "я с Джефом согласен".
 * [Рэнд: Пожалуйста, научитесь просто писать!](http://www.randsinrepose.com/archives/2012/05/16/please_learn_to_write.html) С понятной мыслью "да ну его, научитесь хотя бы мысли записывать".
-* И, в качестве точки, [пожалуйста, не будьте кем-то конкретным, особенно не программистом](http://learncodethehardway.org/blog/MAY_15_2012.html). Ну, потому что говорить что ты программист, когда ты умеешь просто писать код - неправильно, вероятно.
+* И, в качестве точки, [пожалуйста, не будьте кем-то конкретным, особенно не программистом](http://learncodethehardway.org/blog/MAY_15_2012.html). Ну, потому что люди это многораннные существа и описывать себя одним из своих навыков - неправильно, вероятно.
 
 Такие пироги. Читал с удовольствием, но комментировать там не стал, ну его. Все посты одинаково интересны, сходите, почитайте.
 
