--- a/source/posts/2012-05-18.md
+++ b/source/posts/2012-05-18.md
@@ -29,7 +29,7 @@
 * [Демон для логгирования, работающий через zeromq](http://amon.cx/blog/json-logging-zeromq/). Пишет в json, работает со скоростью локального логгера, но по сети. Плюсы только в JSON, разумеется. {logging} {python} {zeromq} {json}
 * [Очень крутая штука: скриншотилка для OS X, которая сохраняет не просто экран, а отдельный слой для каждого окна](http://layersapp.com/) и складывает всё это в .psd. Но, цена, конечно, не человеческая, $25. {desktop} {osx}
 * [Должны ли вы покупать акции Фейсбука?](http://www.buzzfeed.com/jonah/should-you-buy-facebook-stock). Я не куплю. А вы? {facebook} {startup}
-* [5 причин почему ваши QR-коды не работают, и как это починить](http://mashable.com/2012/05/17/reasons-qr-codes-are-broken/) {qrcode} {marketing}
+* [5 причин, почему ваши QR-коды не работают, и как это починить](http://mashable.com/2012/05/17/reasons-qr-codes-are-broken/) {qrcode} {marketing}
 * [Отладчик html/css/js, написанный на javascript, называется Weinre](http://blog.joelambert.co.uk/2012/05/17/installing-weinre-on-mac-os-x/). Я, как обычно, слоупок и только сейчас о нем узнал. Главная фишка - можно отлаживать на реальных мобильных устройствах. {weinre} {html} {javascript}
 * [Эппл собирается выкинуть из Mac Apps Store приложения, использующие глобальные кейбинды](http://www.macworld.com/article/1166857/apps_using_global_hotkeys_will_remain_welcome_in_the_mac_app_store.html). Ыыыы! Бедный Alfred :( [Чуть подробнее о том же](http://www.macstories.net/news/apple-to-reject-mac-apps-with-hotkey-functionality-starting-june-1/) {osx} {apple} {gays}
 
