--- a/source/posts/2012-05-21.md
+++ b/source/posts/2012-05-21.md
@@ -1,6 +1,8 @@
 # Тихо и незаметно
 В лучших традициях линуксоидов, тихо и незаметно, открылся для всех интерфейс [So.cl](http://so.cl/), довольно интересной социальной штуки вокруг поиска Bing. Первые рассказы о нем появились  в начале января. Потом была закрытая бета, которую мне посчастливилось наблюдать, и всё это было, ну, довольно забавно.
 
+>>![center](http://cdn2.ubergizmo.com/wp-content/uploads/2011/12/socl.jpg)<<
+
 А сегодня этот проект стал доступен всем. Что же такое So.cl? По сути это такой милый способ делиться тем, что ты нашел в поиске бинга. Но способ, сделанный так красиво, что им хочется делиться с окружающими. Ты вводишь поисковый запрос, отмечаешь интересные результаты, захватываешь еще немного из поиска по картинкам и бац - всё, что ты выделил, красиво оказывается на фейсбуке. Обязательно попробуйте. Мне так понравилось, что я даже дал майкрософту свой настоящий аккаунт фейсбука :)
 
 Вот как прореагировала онлайн пресса:
