--- a/source/posts/2012-05-22.md
+++ b/source/posts/2012-05-22.md
@@ -1,9 +1,9 @@
 # У меня нет паранойи, за мной не следят
-Иногда мне очень странно, по какому принципу русские СМИ выбирают темы, которые они будут переводить на русский. Вот например, очень важная и широко освещенная в штатах тема: Твиттер поддержал инициативу "Do Not Track" и теперь позволяет пользователям современных браузеров явно отказаться от слежки за собой.
+Иногда мне очень странно, по какому принципу русские СМИ выбирают темы, которые они будут переводить на русский. Вот, например, очень важная и широко освещенная в штатах тема: Твиттер поддержал инициативу "Do Not Track" и теперь позволяет пользователям современных браузеров явно отказаться от слежки за собой.
 
 >>![center](http://clck.ru/15eUw.jpg)
 
-Собственно, что это значит? Это значит, что пользователь, включивший опцию Do Not Track в своём браузере, явно указывает "не собирай информацию обо мне и не используй ее ни для чего". Твиттер интерпретирует это самым простым образом, и встречая пользователя с такой опцией, больше не показывает ему контекстную рекламу. На текущий момент эту фичу поддерживают все браузеры кроме гуглохрома, что кажется мне симптоматичным.
+Собственно, что это значит? Это значит, что пользователь, включивший опцию Do Not Track в своём браузере, явно указывает "не собирай информацию обо мне и не используй ее ни для чего". Твиттер интерпретирует это самым простым образом, и, встречая пользователя с такой опцией, больше не показывает ему контекстную рекламу. На текущий момент эту фичу поддерживают все браузеры, кроме гуглохрома, что кажется мне симптоматичным.
 
 * [Твиттер поддерживает DNT во всех современных браузерах](http://thenextweb.com/twitter/2012/05/17/twitter-will-honor-do-not-track-in-all-supported-browsers-including-ie9-safari-5-1-and-firefox/).
 * [Твиттер воспользовался фичей Мозиллы DNT](http://techcrunch.com/2012/05/17/twitter-now-honors-mozillas-do-not-track-feature/).
@@ -18,12 +18,12 @@
 ## Для всех
 * [Аргументы в пользу стартов в режиме закрытой беты](http://andrewdumont.me/an-argument-for-private-beta). Очень согласен с этой статьей, всё правильно. {startup} {beta}
 * [CEO Насдака рассказывает, что задержки в день открытия торгов Фейсбука были связаны с софтом](http://www.bloomberg.com/news/2012-05-20/nasdaq-ceo-says-poor-design-in-ipo-software-delayed-facebook.html). Стыдно, что биржу технологических проектов обслуживает такая нетехнологическая компания. Чесслово, Яндекс справился бы лучше, как и большинство лидеров IT. {nasdaq} {fail}
-* [Майкрософт: Виста была фигней, давайте выбросим интерфейс Aero](http://www.extremetech.com/computing/129620-windows-8-kills-off-dated-and-cheesy-aero). Ну, всё логично, действительно фигней, правда Метро местами ничуть не лучше. Кстати, какой максимально точный русский аналог английского 'cheesy'? {microsoft} {ui} {aero}
+* [Майкрософт: Виста была фигней, давайте выбросим интерфейс Aero](http://www.extremetech.com/computing/129620-windows-8-kills-off-dated-and-cheesy-aero). Ну, всё логично, действительно фигней, правда, Метро местами ничуть не лучше. Кстати, какой максимально точный русский аналог английского 'cheesy'? {microsoft} {ui} {aero}
 * [Красивая инфографика "Как оценивает рынок каждого пользователя проектов"](http://www.technologyreview.com/computing/40431/). Вкусное: Google ($200 за пользователя), Яндекс ($149), Facebook ($116), Twitter ($57). {infographic} {google} {yandex}
 * [Ух, я давно такое хочу. Сервис, позволяющий в один клик отправить смс с текущим URL  в твой телефон](http://www.fonearena.com/blog/49994/textme-share-content-from-web-to-mobile-via-sms.html). Да, для андроида есть Chrome to Phone. Для нокии есть Nokia Drop. Но этот метод универсальнее. {sms} {mobile}
-* [Хм, индор навигация для слепых](http://www.sciencedaily.com/releases/2012/05/120518132704.htm). Боюсь что это только для очень продвинутых слепых и для очень продвинутых зданий. Мне бы как-то дождаться индор навигации для зрячих. {navigation} {blind}
+* [Хм, индор навигация для слепых](http://www.sciencedaily.com/releases/2012/05/120518132704.htm). Боюсь, что это только для очень продвинутых слепых и для очень продвинутых зданий. Мне бы как-то дождаться индор навигации для зрячих. {navigation} {blind}
 * [Не ищите специалиста по UX, будьте специалистом по UX](http://blog.factlink.com/post/23308427848/dont-look-for-a-ux-guy-be-a-ux-guy). В статье есть еще одна важная мысль: "UI и UX это новый тип IP". Ну, в смысле, "пользовательский интерфейс и то, как он работает - это новый тип интеллектуальной собственности". Ищу специалиста, готового патентовать в USPO части пользовательского интерфейса. Есть такие? {ux} {ui}
-* [5 фейлов, которые допустили разработчики стартапа SocialBlendr](http://blog.willwashburn.com/post/23430029949/5-things-we-done-wrong). Еще раз всем стартаперам хочу сказать. Если вам удалось найти человека с опытом, который готов вас консультировать - держитесь за него и молитесь на него. Опыт, как не странно, половина успеха проекта. {startup} {fail}
+* [5 фейлов, которые допустили разработчики стартапа SocialBlendr](http://blog.willwashburn.com/post/23430029949/5-things-we-done-wrong). Еще раз всем стартаперам хочу сказать. Если вам удалось найти человека с опытом, который готов вас консультировать - держитесь за него и молитесь на него. Опыт, как ни странно, половина успеха проекта. {startup} {fail}
 * [Интересная статистика: кто и почему пиратит "Игру Престолов"](http://torrentfreak.com/whos-pirating-game-of-thrones-and-why-120520/). На первом месте Австралия, в которой вообще не показывает канал HBO. {tv} {pirate}
 
 ## На грани
@@ -43,7 +43,7 @@
 * [Ураа, вышел Perl 5.16.0](http://www.nntp.perl.org/group/perl.perl5.porters/2012/05/msg186903.html). Это был сарказм, если сразу не заметно было. Первый язык, который до и после RSA шифрования выглядит одинаково! {perl} {fun}
 * [А вот, кстати, откуда цитата про RSA - лучшие цитаты о языках программирования](http://www.scriptol.com/programming/quotes.php). Моя любимая: "Программировать на С это как танцевать быстрый танец на полу, свеженатертом воском, с людьми которые держат опасные бритвы". Ну, потому что только в C живет дух старой школы :) {fun} {languages}
 * [Средство для написания вебсервисов на Lua](https://github.com/zedshaw/Tir). На базе mongrel2, производительность неплохая. Вообще жаль, что люди игнорируют Lua, как минимум в браузере он бы жил куда лучше, чем JavaScript. {lua} {mongrel}
-* [heap.coffee - диалект кофискрипта, предлагающий ручное управление памятью и прочие неудобства C](http://syg.github.com/heap.coffee/). Говорят, избавляясь от GC можно работать в 3-4 раза быстрее и предсказуемее. {coffee} {javascript} {html}
+* [heap.coffee - диалект кофискрипта, предлагающий ручное управление памятью и прочие неудобства C](http://syg.github.com/heap.coffee/). Говорят, избавляясь от GC, можно работать в 3-4 раза быстрее и предсказуемее. {coffee} {javascript} {html}
 * [Более близкий взгляд на программные токены RSA SecureID](http://www.sensepost.com/blog/7045.html). {RSA} {security}
 * [Logsna - чистый формат лога](http://ruslanspivak.com/2012/05/20/logsna-a-sane-log-output-format/). Действительно забавный форматтер логов, дружелюбный к грепу. Реализация на питоне, для других языков реализуется не сложно, конечно. {log} {python}
 * [WYSIHTML5 - неплохой псевдовизивиг рич текст редактор](http://xing.github.com/wysihtml5/). Главная фишка - гарантированно валидный html5 на выходе. {html} {wysiwyg}
